# 3DPointCloud

./: CMakeLists.txt  PointSource.cxx  vtkPLYReaderLocal.cpp
KinectPointCloud/: 2016.2.10.12.30.1_PointCloud.xyz
